--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -437,7 +437,17 @@ a{
     border-radius: 8px;
     opacity: 0.6;
     background: #D0EFED;
+    transition: margin-bottom 0.5s ease, opacity 0.5s ease;
 }
+
+.courses .course-items .images:hover{
+    opacity: 1;
+    position: relative;
+    z-index: 1;
+    margin-bottom: 80px;
+}
+
+
 
 .courses .info-item{
     display: flex;
@@ -450,6 +460,10 @@ a{
     border-radius: 8px;
     background: #FFF;
     box-shadow: 0px 16px 90px 0px rgba(0, 0, 0, 0.05);
+}
+
+.courses .info-item:hover{
+    box-shadow: 0px 20px 90px 0px rgba(0, 0, 0, 0.2);
 }
 
 .courses .info-item .sub-body{
