--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -437,14 +437,14 @@ a{
     border-radius: 8px;
     opacity: 0.6;
     background: #D0EFED;
-    transition: margin-bottom 0.5s ease, opacity 0.5s ease;
+    position: relative;
+    top: 0;
+    transition: top 0.5s ease, opacity 0.5s ease;
 }
 
 .courses .course-items .images:hover{
     opacity: 1;
-    position: relative;
-    z-index: 1;
-    margin-bottom: 80px;
+    top: -70px;
 }
 
 
