--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -52,7 +52,10 @@ a{
     position: sticky;
     top: -38px;
     z-index: 1;
-
+    color: #30fa1a;
+    background: rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px) brightness(90%);
+    -webkit-backdrop-filter: blur(5px) brightness(90%);
 }
 
 .header-content .content .body{
@@ -435,7 +438,7 @@ a{
     height: 393px;
     object-fit: cover;
     border-radius: 8px;
-    opacity: 0.6;
+    opacity: 0.35;
     background: #D0EFED;
     position: relative;
     top: 0;
